--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   desktop_window: ^0.4.0
+  window_manager: ^0.3.7
   cupertino_icons: ^1.0.2
   desktop_drop: ^0.4.4
   path_provider: ^2.1.1
