--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   filesystem_picker: ^4.0.0
   permission_handler: ^11.0.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
