--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  desktop_window: ^0.4.0
   window_manager: ^0.3.7
   cupertino_icons: ^1.0.2
   desktop_drop: ^0.4.4
@@ -42,9 +41,9 @@ dependencies:
   url_launcher: ^6.2.1
   freezed_annotation: ^2.4.1
   flutter_bloc: ^8.1.3
-  filesystem_picker: ^4.0.0
   permission_handler: ^11.0.1
   shared_preferences: ^2.2.2
+  file_selector: ^1.0.1
 
 dev_dependencies:
   flutter_test:
